--- a/markup/includes/list-agency-user.html
+++ b/markup/includes/list-agency-user.html
@@ -133,17 +133,8 @@
         </table>
     </div>
     <ul class="pager">
-        <li><a href="#" class="previous"><span class="icon-chevron-thin-left"></span></a></li>
-        <li class="active"><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li><a href="#">6</a></li>
-        <li><a href="#">7</a></li>
-        <li><a href="#">8</a></li>
-        <li><a href="#">9</a></li>
-        <li><a href="#">10</a></li>
-        <li><a href="#" class="next"><span class="icon-chevron-thin-right"></span></a></li>
+        <li><a><span class="icon-chevron-thin-left"></span>Previous</a></li>
+        <li><span class="static">Showing <em><b>2</b></em> of <em><b>551</b></em> pages</span></li>
+        <li class="disable"><a>Next<span class="icon-chevron-thin-right"></span></a></li>
     </ul>
 </div>
