--- a/markup/scss/_add-property-form.scss
+++ b/markup/scss/_add-property-form.scss
@@ -741,8 +741,10 @@
 			
 			.tag{
 				display: block;
-				padding:10px;
+				padding:5px 10px;
 				text-align: center;
+				background: $index-white;
+				margin: 0 10px 10px;
 			}
 		}
 	}
@@ -757,16 +759,6 @@
 		@include align-reset(top,13,16);
 		position: relative;
 		padding: 0 0 20px;
-		
-		&:after{
-			position: absolute;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			height: 1px;
-			content:'';
-			background: #e7e7e7; 
-		}
 		
 		li{
 			padding: 0 10px 8px;
