--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -6394,6 +6394,7 @@ a {
   line-height: 19px;
   text-transform: capitalize;
   padding: 10px 0 0;
+  border-bottom: 1px solid #000;
 }
 
 @media (max-width: 1023px) {
@@ -6805,21 +6806,32 @@ a {
   margin: 0 0 10px;
 }
 
-#footer .cols-holder .contact {
-  padding: 0 3px;
+.contact {
+  padding: 30px 10px;
   text-align: left;
+  overflow: hidden;
+  border-top: 1px solid #606060;
 }
 
-#footer .cols-holder .contact .input-holder {
+.contact h2 {
+  font-size: 18px;
+  line-height: 21px;
+  display: block;
+  text-align: center;
+  color: #edf1f4;
+  font-weight: 600;
+}
+
+.contact .input-holder {
   width: 100%;
   margin: 0 0 10px;
 }
 
-#footer .cols-holder .contact .input-holder.error .error-text {
+.contact .input-holder.error .error-text {
   display: block;
 }
 
-#footer .cols-holder .contact .error-text {
+.contact .error-text {
   color: #e14646;
   font-size: 13px;
   line-height: 16px;
@@ -6827,8 +6839,8 @@ a {
   padding: 5px 0 0;
 }
 
-#footer .cols-holder .contact textarea,
-#footer .cols-holder .contact input[type="text"], #footer .cols-holder .contact input[type="email"] {
+.contact textarea,
+.contact input[type="text"], .contact input[type="email"] {
   width: 100%;
   display: block;
   height: 30px;
@@ -6843,72 +6855,73 @@ a {
   -ms-transition: all 0.4s ease;
 }
 
-#footer .cols-holder .contact textarea::-webkit-input-placeholder,
-#footer .cols-holder .contact input[type="text"]::-webkit-input-placeholder, #footer .cols-holder .contact input[type="email"]::-webkit-input-placeholder {
+.contact textarea::-webkit-input-placeholder,
+.contact input[type="text"]::-webkit-input-placeholder, .contact input[type="email"]::-webkit-input-placeholder {
   color: #999;
 }
 
-#footer .cols-holder .contact textarea::-moz-placeholder,
-#footer .cols-holder .contact input[type="text"]::-moz-placeholder, #footer .cols-holder .contact input[type="email"]::-moz-placeholder {
+.contact textarea::-moz-placeholder,
+.contact input[type="text"]::-moz-placeholder, .contact input[type="email"]::-moz-placeholder {
   opacity: 1;
   color: #999;
 }
 
-#footer .cols-holder .contact textarea:-moz-placeholder,
-#footer .cols-holder .contact input[type="text"]:-moz-placeholder, #footer .cols-holder .contact input[type="email"]:-moz-placeholder {
+.contact textarea:-moz-placeholder,
+.contact input[type="text"]:-moz-placeholder, .contact input[type="email"]:-moz-placeholder {
   color: #999;
 }
 
-#footer .cols-holder .contact textarea:-ms-input-placeholder,
-#footer .cols-holder .contact input[type="text"]:-ms-input-placeholder, #footer .cols-holder .contact input[type="email"]:-ms-input-placeholder {
+.contact textarea:-ms-input-placeholder,
+.contact input[type="text"]:-ms-input-placeholder, .contact input[type="email"]:-ms-input-placeholder {
   color: #999;
 }
 
-#footer .cols-holder .contact textarea.placeholder,
-#footer .cols-holder .contact input[type="text"].placeholder, #footer .cols-holder .contact input[type="email"].placeholder {
+.contact textarea.placeholder,
+.contact input[type="text"].placeholder, .contact input[type="email"].placeholder {
   color: #999;
 }
 
-#footer .cols-holder .contact textarea:focus,
-#footer .cols-holder .contact input[type="text"]:focus, #footer .cols-holder .contact input[type="email"]:focus {
+.contact textarea:focus,
+.contact input[type="text"]:focus, .contact input[type="email"]:focus {
   border-color: #fff;
   color: #fff;
 }
 
-#footer .cols-holder .contact textarea:focus::-webkit-input-placeholder,
-#footer .cols-holder .contact input[type="text"]:focus::-webkit-input-placeholder, #footer .cols-holder .contact input[type="email"]:focus::-webkit-input-placeholder {
+.contact textarea:focus::-webkit-input-placeholder,
+.contact input[type="text"]:focus::-webkit-input-placeholder, .contact input[type="email"]:focus::-webkit-input-placeholder {
   color: #fff;
 }
 
-#footer .cols-holder .contact textarea:focus::-moz-placeholder,
-#footer .cols-holder .contact input[type="text"]:focus::-moz-placeholder, #footer .cols-holder .contact input[type="email"]:focus::-moz-placeholder {
+.contact textarea:focus::-moz-placeholder,
+.contact input[type="text"]:focus::-moz-placeholder, .contact input[type="email"]:focus::-moz-placeholder {
   opacity: 1;
   color: #fff;
 }
 
-#footer .cols-holder .contact textarea:focus:-moz-placeholder,
-#footer .cols-holder .contact input[type="text"]:focus:-moz-placeholder, #footer .cols-holder .contact input[type="email"]:focus:-moz-placeholder {
+.contact textarea:focus:-moz-placeholder,
+.contact input[type="text"]:focus:-moz-placeholder, .contact input[type="email"]:focus:-moz-placeholder {
   color: #fff;
 }
 
-#footer .cols-holder .contact textarea:focus:-ms-input-placeholder,
-#footer .cols-holder .contact input[type="text"]:focus:-ms-input-placeholder, #footer .cols-holder .contact input[type="email"]:focus:-ms-input-placeholder {
+.contact textarea:focus:-ms-input-placeholder,
+.contact input[type="text"]:focus:-ms-input-placeholder, .contact input[type="email"]:focus:-ms-input-placeholder {
   color: #fff;
 }
 
-#footer .cols-holder .contact textarea:focus.placeholder,
-#footer .cols-holder .contact input[type="text"]:focus.placeholder, #footer .cols-holder .contact input[type="email"]:focus.placeholder {
+.contact textarea:focus.placeholder,
+.contact input[type="text"]:focus.placeholder, .contact input[type="email"]:focus.placeholder {
   color: #fff;
 }
 
-#footer .cols-holder .contact textarea {
+.contact textarea {
   resize: none;
   height: 100px;
   overflow: auto;
 }
 
-#footer .cols-holder .contact input[type="submit"] {
+.contact input[type="submit"] {
   display: block;
+  color: #fff;
   border: 0;
   width: 100%;
   padding: 5px;
@@ -6920,7 +6933,7 @@ a {
   -ms-transition: background 0.4s ease;
 }
 
-#footer .cols-holder .contact input[type="submit"]:hover {
+.contact input[type="submit"]:hover {
   background: #2685cc;
 }
 
