--- a/markup/includes/add-property-form.html
+++ b/markup/includes/add-property-form.html
@@ -107,9 +107,9 @@
                 <div class="layout-holder">
                     <span class="title">Price:</span>
                     <div class="input-holder">
-                        <input type="number" name="price" ng-model="form.data.price" placeholder="Please enter your price">
+                        <input type="number" class="PriceField" name="price" ng-model="form.data.price" placeholder="Please enter your price">
                         <span class="error-text">This is error</span>
-                        <span class="calculatedPrice"></span>
+                        <span class="calculatedPrice">Please enter the price</span>
                     </div>
                 </div>
                 <div class="layout-holder">
