--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -314,7 +314,7 @@ a{ outline: none;}
 		margin: 0 30px 0 0;
 		
 		@include media('<desktop'){
-			margin: 0 20px 0 0;
+			margin: 0 15px 0 0;
 			width: 200px;
 		}
 		
@@ -507,7 +507,7 @@ a{ outline: none;}
 	}
 	
 	@include media('<tablet'){
-		margin: 15px 25px 0 10px;
+		display: none;
 	}
 	
 	span[class*="icon-"], span[class*="icon-"] {
@@ -524,8 +524,21 @@ a{ outline: none;}
 	padding: 17px 10px;
 	border-left: 1px solid darken($mix-blue, 15%);
 
-	@include media('<=desktop'){
-		display: none;
+	@include media('<tablet'){
+		padding: 15px 10px;
+	}
+
+	.hidden-xs {
+		@include media('<=desktop'){ display: none;}
+	}
+
+	span[class*="icon-"], span[class*="icon-"] {
+		@include align(top);
+		padding: 1px 4px;
+
+		@include media('<=desktop'){
+			padding: 1px 0;
+		}
 	}
 
 	a{
